# orf

./: Cargo.toml  README.md  install.sh
src/: cli.rs  cmd_handler.rs  command_handler.rs  lib.rs  main.rs
src/commands/branching/: branch.rs  checkout.rs
src/commands/config/: conf_utils.rs  config.rs
src/commands/core/: add.rs  catfile.rs  commit.rs  hash_object.rs  init.rs  status.rs  write_tree.rs
src/commands/core/index/: idx_ls.rs  idx_main.rs  idx_rm.rs
src/commands/history/: diff.rs  log.rs  show.rs
src/commands/remote/: remote.rs
src/storage/: refs.rs  repo.rs  utils.rs
src/storage/objects/: blob.rs  branch.rs  change.rs  commit.rs  delta.rs  pack.rs  tag.rs  tree.rs
