[package]
name = "orf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.89"
assert_cmd = "2.0.16"
assert_matches = "1.5.0"
axum = "0.8.4"
bincode = { version = "2.0.1", features = ["serde"] }
bstr = "1.12.0"
byteorder = "1.5.0"
bytes = "1.10.1"
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
colored = "2.2.0"
diff = "0.1.13"
flate2 = "1.0.34"
hex = "0.4.3"
indicatif = "0.17.9"
lazy_static = "1.5.0"
log = "0.4.27"
predicates = "3.1.2"
rayon = "1.10.0"
regex = "1.11.1"
regex-syntax = "0.8.5"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_toml = "0.0.1"
sha1 = "0.10.6"
similar = "2.7.0"
tempdir = "0.3.7"
tempfile = "3.13.0"
termcolor = "1.4.1"
thiserror = "1.0.64"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.8.20"
url = { version = "2.5.4", features = ["serde"] }
walkdir = "2.5.0"
